meta info added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login | Pharmacy management Software</title>
+    <link rel="shortcut icon" href="public/images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="public/output.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -13,7 +14,7 @@
             <div class="w-10/12 md:w-8/12 border rounded-lg overflow-hidden flex">
                 <form action="" class="md:w-2/4 w-full p-4 text-center flex flex-col items-center gap-4 bg-slate-200 backdrop:blur-lg shadow-md">
                     <h1 class="font-bold text-xl uppercase">LOGIN</h1>
-                    <p class="text-xs text-slate-600">Welcome to MMIT Pharmecy management Software.</p>
+                    <p class="text-xs text-slate-600">Welcome to MMIT Pharmacy management Software.</p>
                     <div class="bg-slate-100 flex items-center py-2 px-1 rounded-md shadow border border-slate-100 w-full">
                         <i class="fa-regular fa-user text-sm"></i>
                         <input type="text" name="" id="" placeholder="Username" class="bg-transparent text-gray-600 text-xs outline-none px-2 w-full">
