--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <main>
         <div class="h-screen w-screen flex items-center justify-center" style="background: url(public/images/bg.jpg); background-size: cover;">
             <div class="w-10/12 md:w-8/12 border rounded-lg overflow-hidden flex">
-                <form action="" class="md:w-2/4 w-full p-4 text-center flex flex-col items-center gap-4 bg-slate-200 backdrop:blur-lg shadow-md">
+                <form action="" class="md:w-2/4 w-full p-4 md:px-16 text-center flex flex-col items-center justify-center gap-4 bg-slate-200 backdrop:blur-lg shadow-md">
+                    <img src="public/images/logo.png" alt="" class="w-20">
                     <h1 class="font-bold text-xl uppercase">LOGIN</h1>
                     <p class="text-xs text-slate-600">Welcome to MMIT Pharmacy management Software.</p>
                     <div class="bg-slate-100 flex items-center py-2 px-1 rounded-md shadow border border-slate-100 w-full">
