--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <button class="px-4 py-1 text-white bg-blue-600 rounded-md">Login</button>
                 </form>
                 <div class="w-2/4 h-[500px] overflow-hidden hidden md:block">
-                    <img src="https://api.asm.skype.com/v1/objects/0-jhb-d8-767cde76684e7f54a1a69d613828bfc8/views/imgpsh_fullsize_anim" alt="" class="h-full w-full object-cover">
+                    <img src="public/images/avatar.png" alt="" class="h-full w-full object-cover">
                 </div>
             </div>
         </div>
