--- a/sale.html
+++ b/sale.html
@@ -5,15 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="public/output.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div id="wrapper" class="w-full flex">
         <aside class="min-h-screen w-64 bg-slate-700 whitespace-nowrap text-white flex flex-col items-center">
-            <a href="" class="py-2 pl-3 hover:bg-slate-600 w-full">
+            <a href="" class="py-2 pl-3 hover:bg-slate-600 w-full flex items-center gap-2 border-l-4 border-green-500">
+                <i class="fa-solid fa-house"></i>
                 <span>Dashboard</span>
             </a>
-            <a href="" class="py-2">Dashboard</a>
-            <a href="" class="py-2">Dashboard</a>
+            <a href="" class="py-2 pl-3 hover:bg-slate-600 w-full flex items-center gap-2 border-l-4 border-transparent">
+                <i class="fa-solid fa-house"></i>
+                <span>Sale</span>
+            </a>
+            <a href="" class="py-2 pl-3 hover:bg-slate-600 w-full flex items-center gap-2 border-l-4 border-transparent">
+                <i class="fa-solid fa-house"></i>
+                <span>Dashboard</span>
+            </a>
         </aside>
         <main class="bg-green-700 w-full">
             <h1>Hello Sirajganj</h1>
