--- a/sale.html
+++ b/sale.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div id="wrapper" class="w-full flex">
-        <aside class="min-h-screen w-64 bg-slate-700 whitespace-nowrap text-white flex flex-col items-center">
-            <a href="" class="py-2 pl-3 hover:bg-slate-600 w-full flex items-center gap-2 border-l-4 border-green-500">
+        <aside class="hidden min-h-screen w-64 bg-slate-700 whitespace-nowrap text-white md:flex flex-col items-center">
+            <a href="" class="py-2 pl-3 hover:bg-slate-600 w-full flex items-center gap-2 border-l-4 border-transparent">
                 <i class="fa-solid fa-house"></i>
                 <span>Dashboard</span>
             </a>
-            <a href="" class="py-2 pl-3 hover:bg-slate-600 w-full flex items-center gap-2 border-l-4 border-transparent">
+            <a href="" class="py-2 pl-3 hover:bg-slate-600 w-full flex items-center gap-2 border-l-4 border-green-500">
                 <i class="fa-solid fa-house"></i>
                 <span>Sale</span>
             </a>
@@ -24,8 +24,43 @@
             </a>
         </aside>
         <main class="bg-green-700 w-full">
-            <h1>Hello Sirajganj</h1>
+            <div class="bg-white w-[98%] my-4 m-auto p-3 flex flex-col gap-3">
+                <select name="" id="" class="w-full border p-1 outline-none rounded-md">
+                    <option value="">option 1</option>
+                    <option value="">option 2</option>
+                    <option value="">option 3</option>
+                    <option value="">option 4</option>
+                </select>
+                <div class="w-full grid grid-cols-1 md:grid-cols-3 gap-2">
+                    <div class="col-span-1 clear-start flex flex-col gap-2">
+                        <p class="font-semibold">Account<span class="text-red-600">*</span></p>
+                        <select name="" id="" class="w-full border p-1 outline-none rounded-md">
+                            <option value="">option 1</option>
+                            <option value="">option 2</option>
+                            <option value="">option 3</option>
+                            <option value="">option 4</option>
+                        </select>
+                    </div>
+                    <div class="col-span-1 clear-start flex flex-col gap-2">
+                        <p class="font-semibold">Date<span class="text-red-600">*</span></p>
+                        <select name="" id="" class="w-full border p-1 outline-none rounded-md">
+                            <option value="">option 1</option>
+                            <option value="">option 2</option>
+                            <option value="">option 3</option>
+                            <option value="">option 4</option>
+                        </select>
+                    </div>
+                    <div class="col-span-1 clear-start flex flex-col gap-2">
+                        <p class="font-semibold">Doctor</p>
+                        <select name="" id="" class="w-full border p-1 outline-none rounded-md">
+                            <option value="">option 1</option>
+                            <option value="">option 2</option>
+                            <option value="">option 3</option>
+                            <option value="">option 4</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
         </main>
-    </div>
 </body>
 </html>
