--- a/sale.html
+++ b/sale.html
@@ -60,6 +60,21 @@
                         </select>
                     </div>
                 </div>
+                <table class="border whitespace-nowrap overflow-auto">
+                    <thead>
+                        <tr class="bg-violet-500">
+                            <th class="min-w-52">Sr</th>
+                            <th>Medicine</th>
+                            <th>Rack</th>
+                            <th>Expiry Date</th>
+                            <th>Qty</th>
+                            <th>Sale Price</th>
+                            <th>Bonus</th>
+                            <th>Available</th>
+                            <th>Amount</th>
+                        </tr>
+                    </thead>
+                </table>
             </div>
         </main>
 </body>
