Detail section added

--- a/sale.html
+++ b/sale.html
@@ -105,6 +105,35 @@
                             <span class="border-r w-4/12 font-semibold">Discount</span>
                             <input type="number" name="" id="" placeholder="Discount Amount" class="w-7/12 outline-none">
                         </div>
+                        <div class="w-full flex items-center justify-between border-b p-2">
+                            <span class="border-r w-4/12 font-semibold">Vat</span>
+                            <input type="number" name="" id="" placeholder="Vat Amount" class="w-7/12 outline-none">
+                        </div>
+                        <div class="w-full flex items-center justify-between border-b p-2">
+                            <span class="border-r w-4/12 font-semibold">Total</span>
+                            <span class="font-semibold">0</span>
+                        </div>
+                        <div class="w-full flex items-center justify-between border-b p-2">
+                            <span class="border-r w-4/12 font-semibold">Payment Method</span>
+                            <select name="" id="" class="w-7/12">
+                                <option value="cash">- Cash -</option>
+                                <option value="bkash">- bKash -</option>
+                                <option value="naggad">- Naggad -</option>
+                                <option value="card">- card -</option>
+                            </select>
+                        </div>
+                        <div class="w-full flex items-center justify-between border-b p-2">
+                            <span class="border-r w-4/12 font-semibold">Paid</span>
+                            <input type="number" name="" id="" placeholder="Paid Amount" class="w-7/12 outline-none">
+                        </div>
+                        <div class="w-full flex items-center justify-between border-b p-2">
+                            <span class="border-r w-4/12 font-semibold">Due</span>
+                            <span class="font-semibold">0</span>
+                        </div>
+                        <div class="w-full flex items-center justify-between border-b p-2">
+                            <span class="border-r w-4/12 font-semibold">Change Amount</span>
+                            <span class="font-semibold">0</span>
+                        </div>
                     </div>
                 </div>
             </div>
