--- a/sale.html
+++ b/sale.html
@@ -23,8 +23,8 @@
                 <span>Dashboard</span>
             </a>
         </aside>
-        <main class="bg-green-700 w-full">
-            <div class="bg-white w-[98%] my-4 m-auto p-3 flex flex-col gap-3">
+        <main class="bg-slate-200 w-full">
+            <div class="bg-slate-100 w-[98%] my-4 m-auto p-3 flex flex-col gap-3">
                 <select name="" id="" class="w-full border p-1 outline-none rounded-md">
                     <option value="">option 1</option>
                     <option value="">option 2</option>
@@ -43,12 +43,7 @@
                     </div>
                     <div class="col-span-1 clear-start flex flex-col gap-2">
                         <p class="font-semibold">Date<span class="text-red-600">*</span></p>
-                        <select name="" id="" class="w-full border p-1 outline-none rounded-md">
-                            <option value="">option 1</option>
-                            <option value="">option 2</option>
-                            <option value="">option 3</option>
-                            <option value="">option 4</option>
-                        </select>
+                        <input type="date" name="" id="" class="w-full border p-1 outline-none rounded-md">
                     </div>
                     <div class="col-span-1 clear-start flex flex-col gap-2">
                         <p class="font-semibold">Doctor</p>
@@ -90,8 +85,11 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="w-full p-1 grid grid-cols-1 md:grid-cols-3">
-                    <div class="col-span-1 md:col-span-2"></div>
+                <div class="w-full p-1 grid grid-cols-1 md:grid-cols-3 gap-3">
+                    <div class="col-span-1 md:col-span-2 flex flex-col gap-2">
+                        <span class="font-semibold text-slate-700">Note</span>
+                        <textarea name="" id="" class="border h-52 outline-none p-1 bg-white"></textarea>
+                    </div>
                     <div class="col-span-1 border">
                         <div class="w-full flex items-center justify-between border-b p-2">
                             <span class="border-r w-4/12 font-semibold">Subtotal</span>
@@ -99,15 +97,15 @@
                         </div>
                         <div class="w-full flex items-center justify-between border-b p-2">
                             <span class="border-r w-4/12 font-semibold">Discount %</span>
-                            <input type="number" name="" id="" placeholder="Enter Percentage" class="w-7/12 outline-none">
+                            <input type="number" name="" id="" placeholder="Enter Percentage" class="w-7/12 outline-none bg-transparent">
                         </div>
                         <div class="w-full flex items-center justify-between border-b p-2">
                             <span class="border-r w-4/12 font-semibold">Discount</span>
-                            <input type="number" name="" id="" placeholder="Discount Amount" class="w-7/12 outline-none">
+                            <input type="number" name="" id="" placeholder="Discount Amount" class="w-7/12 outline-none bg-transparent">
                         </div>
                         <div class="w-full flex items-center justify-between border-b p-2">
                             <span class="border-r w-4/12 font-semibold">Vat</span>
-                            <input type="number" name="" id="" placeholder="Vat Amount" class="w-7/12 outline-none">
+                            <input type="number" name="" id="" placeholder="Vat Amount" class="w-7/12 outline-none bg-transparent">
                         </div>
                         <div class="w-full flex items-center justify-between border-b p-2">
                             <span class="border-r w-4/12 font-semibold">Total</span>
@@ -115,7 +113,7 @@
                         </div>
                         <div class="w-full flex items-center justify-between border-b p-2">
                             <span class="border-r w-4/12 font-semibold">Payment Method</span>
-                            <select name="" id="" class="w-7/12">
+                            <select name="" id="" class="w-7/12 bg-transparent">
                                 <option value="cash">- Cash -</option>
                                 <option value="bkash">- bKash -</option>
                                 <option value="naggad">- Naggad -</option>
@@ -124,13 +122,13 @@
                         </div>
                         <div class="w-full flex items-center justify-between border-b p-2">
                             <span class="border-r w-4/12 font-semibold">Paid</span>
-                            <input type="number" name="" id="" placeholder="Paid Amount" class="w-7/12 outline-none">
+                            <input type="number" name="" id="" placeholder="Paid Amount" class="w-7/12 outline-none bg-transparent">
                         </div>
                         <div class="w-full flex items-center justify-between border-b p-2">
                             <span class="border-r w-4/12 font-semibold">Due</span>
                             <span class="font-semibold">0</span>
                         </div>
-                        <div class="w-full flex items-center justify-between border-b p-2">
+                        <div class="w-full flex items-center justify-between p-2">
                             <span class="border-r w-4/12 font-semibold">Change Amount</span>
                             <span class="font-semibold">0</span>
                         </div>
